Update alignment of buttons and text field in header search and online branch, and ensure that 'skip to content' feature is invisible but still gets seen by screen readers.

--- a/css/src/_content.scss
+++ b/css/src/_content.scss
@@ -1,5 +1,14 @@
 
 
+.skip-content {
+	position: absolute !important;
+	height: 1px; 
+	width: 1px;
+	overflow: hidden;
+	clip: rect(1px 1px 1px 1px); /* IE6, IE7 */
+	clip: rect(1px, 1px, 1px, 1px);
+}
+
 .container {
 	max-width: 1220px;
 	margin: 0 auto;
